# taskwarrior-tui

./: Cargo.toml
crates/linear-sync/: Cargo.toml
crates/linear-sync/src/: config.rs  lib.rs  main.rs
src/: action.rs  app.rs  help.rs  help.tmpl  keyconfig.rs  task_report.rs
src/pane/: mod.rs
