[package]
name = "linear-sync"
version = "0.1.0"
edition = "2024"
description = "Sync taskwarrior tasks with Linear issues"

[[bin]]
name = "linear-sync"
path = "src/main.rs"

[lib]
name = "linear_sync"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
uuid = "1"
